# elaborato_programmazione

./: CMakeLists.txt  Elaborato.h  Informations.cpp  Informations.h  Item.cpp  Item.h  List.cpp  List.h  Observer.h  README.md  Subject.h  User.cpp  User.h  main.cpp
Test/: CMakeLists.txt  TestItem.cpp  TestList.cpp  TestUser.cpp  runAllTest.cpp
